Finish: Header Page

--- a/index.html
+++ b/index.html
@@ -4,21 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>oxer</title>
+  <link rel="stylesheet" href="assets/styles/header.css">
   <link rel="stylesheet" href="assets/styles/main.css" />
 </head>
 <body>
   <header>
-    <nav>
+    <div class="container">
       <div class="logo">
-        <img src="assets/images/logo.png" /> 
+        <a href="index.html"><img src="assets/images/logo.png" alt="logo" /></a>
       </div>
-      <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#about">about</a></li>
-        <li><a href="#classes">classes</a></li>
-        <li><a href="#blog">blog</a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul class="contact_info">
+          <li><a href="#"><img src="assets/images/icons/telephone.png" alt="telephone icon"> +0111115555</a></li>
+          <li><a href="#"><img src="assets/images/icons/mail.png" alt="mail icon"> mail@domain.com</a></li>
+          <li><a href="#"><img src="assets/images/icons/location.png" alt="location icon">Lorem ipsum dolor sit.</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="classes.html">classes</a></li>
+          <li><a href="blog.html">blog</a></li>
+          <li><a href="#"><img src="assets/images/icons/search-icon.png" alt=""></a></li>
+        </ul>
+      </nav>    
+    </div>
   </header>
   <main>
     <section class="hero">
@@ -86,7 +95,7 @@
           17 <br />
           feb
         </p>
-        <h2>Boxer Joniya Daro</h2>
+        <!-- <h2>Boxer Joniya Daro</h2> -->
         <span>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
