Add: Hero section

--- a/index.html
+++ b/index.html
@@ -17,38 +17,42 @@
         <ul class="contact_info">
           <li><a href="#"><img src="assets/images/icons/telephone.png" alt="telephone icon"> +0111115555</a></li>
           <li><a href="#"><img src="assets/images/icons/mail.png" alt="mail icon"> mail@domain.com</a></li>
-          <li><a href="#"><img src="assets/images/icons/location.png" alt="location icon">Lorem ipsum dolor sit.</a></li>
+          <li><a href="#"><img src="assets/images/icons/location.png" alt="location icon">Lorem ipsum dolor sit.</a>
+          </li>
         </ul>
         <ul>
           <li><a href="#">home</a></li>
           <li><a href="about.html">about</a></li>
           <li><a href="classes.html">classes</a></li>
           <li><a href="blog.html">blog</a></li>
-          <li><a href="#"><img src="assets/images/icons/search-icon.png" alt=""></a></li>
+          <li><a href="#"><img src="assets/images/icons/search-icon.png" alt="search icon"></a></li>
         </ul>
-      </nav>    
+      </nav>
     </div>
   </header>
   <main>
     <section class="hero">
-      <div class="boxer">
-        <h1>bo<span>xer</span></h1>
-      </div>
-      <div class="boxingcenter">
-        <h2>
-          <span>01</span> <br />
-          boxing <br />
-          center
-        </h2>
-        <div class="input"><input type="button" value="Contact Us" /></div>
-      </div>
-      <div class="scroll-raiht_lift">
-        <a href="#"><img src="/assets/images/icons/next-grey.png" /></a>
-        <br />
-        <a href="#"><img src="assets/images/icons/left-angle.png" /></a>
+      <div class="container">
+        <div class="center">
+          <div class="oxer">
+            <h1>O<span>XE</span><span>R</span></h1>
+          </div>
+          <div class="boxingcenter">
+            <h2>
+            <span>01</span> <br />
+            boxing <br />
+            center
+          </h2>
+          <a href="#">Contact Us</a>
+        </div>
+        </div>
+        <div class="scroll_raiht_lift">
+          <a href="#"><img src="assets/images/icons/right-angle.png" /></a>
+          <a href="#"><img src="assets/images/icons/left-angle.png" /></a>
+        </div>
       </div>
     </section>
-    <section class="about-class" id="about">
+    <!-- <section class="about-class" id="about">
       <img src="/assets/images/about-bg.jpg" />
       <div class="about">
         <h2>about class</h2>
@@ -172,7 +176,7 @@
         <a href="#"><img src="/assets/images/youtube.png" /></a>
       </div>
       <p>© 2020 All Rights Reserved. Design by Free Html Templates</p>
-    </footer>
+    </footer> -->
   </main>
 </body>
 </html>
