Finish: Main Page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="contact_info">
           <li><a href="#"><img src="assets/images/icons/telephone.png" alt="telephone icon"> +0111115555</a></li>
           <li><a href="#"><img src="assets/images/icons/mail.png" alt="mail icon"> mail@domain.com</a></li>
-          <li><a href="#"><img src="assets/images/icons/location.png" alt="location icon">Lorem ipsum dolor sit.</a>
+          <li><a href="#"><img src="assets/images/icons/location.png" alt="location icon">Egypt</a>
           </li>
         </ul>
         <ul>
