--- a/about.html
+++ b/about.html
@@ -4,8 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="assets/styles/header.css">
+  <link rel="stylesheet" href="assets/styles/about.css">
 </head>
 <body>
+  <header>
+    <div class="container">
+      <div class="logo">
+        <a href="index.html"><img src="assets/images/logo.png" alt="logo" /></a>
+      </div>
+      <nav>
+        <ul class="contact_info">
+          <li><a href="#"><img src="assets/images/icons/telephone.png" alt="telephone icon"> +0111115555</a></li>
+          <li><a href="#"><img src="assets/images/icons/mail.png" alt="mail icon"> mail@domain.com</a></li>
+          <li><a href="#"><img src="assets/images/icons/location.png" alt="location icon">Egypt</a>
+          </li>
+        </ul>
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="about.html">about</a></li>
+          <li><a href="classes.html">classes</a></li>
+          <li><a href="blog.html">blog</a></li>
+          <li><a href="#"><img src="assets/images/icons/search-icon.png" alt="search icon"></a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   <section class="about-class" id="about">
     <img src="/assets/images/about-bg.jpg" />
     <div class="about">
